--- a/Chapitre 4.2 - CSV, JSON et requetes.ipynb
+++ b/Chapitre 4.2 - CSV, JSON et requetes.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "Le format JSON est apparu pendant la première moitié des années 2000 et a été développé pour alléger la communication de données \"simples\" sur le web. Il est né dans le contexte du langage JavaScript mais est aujourd'hui utilisé dans l'ensemble des langages fortement utilisés (python, java, ruby, php, etc.)\n",
     "\n",
-    "Le JSON est aujourd'hui présent dans 99% des requêtes du web sans que vous vous en rendiez compte ! Il est en effet le format priviliégié par les développeurs pour communiquer entre le client et le serveur une fois la page affichée. "
+    "Le JSON est aujourd'hui présent dans 99% des requêtes du web sans que vous vous en rendiez compte ! Il est en effet le format privilégié par les développeurs pour communiquer entre le client et le serveur une fois la page affichée. "
    ]
   },
   {
@@ -26,11 +26,11 @@
    "metadata": {},
    "source": [
     "### 2. Structure\n",
-    "    Si je regarde la communication entre Twitter et mon client, je peux voir quelque chose comme cela dans les ce qui est communiqué de mon navigateur (*Note: * pour respecter la vie privée du professeur, ce qui est affiché en dessous et le résultat d'une recherche sur l'API de Twitter pour les termes \"Humanités Numériques\"):\n",
+    "    Si je regarde la communication entre Twitter et mon client, je peux voir quelque chose comme cela dans les ce qui est communiqué de mon navigateur (*note: * pour respecter la vie privée du professeur, ce qui est affiché en dessous et le résultat d'une recherche sur l'API de Twitter pour les termes \"Humanités numériques\"):\n",
     "\n",
     "![JSON Exemple](images/json.twitter.png)\n",
     "\n",
-    "Vous reconnaissez ? JSON est en fait très proche de la manière de décrire des dictionnaires ou des listes en python. Et de fait, l'object racine de JSON peut être une liste ou un dictionnnaire et peut contenir :\n",
+    "Vous reconnaissez ? JSON est en fait très proche de la manière de décrire des dictionnaires ou des listes en python. Et de fait, l'objet racine de JSON peut être une liste ou un dictionnaire et peut contenir :\n",
     "- des listes,\n",
     "- des dictionnaires,\n",
     "- des booléens,\n",
@@ -148,9 +148,9 @@
    "source": [
     "#### b. comme bonus : la méthode `.format()` pour la concaténation de chaîne\n",
     "\n",
-    "La concaténation de chaînes peut vite devenir ennuyeuse, répétitive, fautive. Heureusement, python propose des outils plutôt bien pensés pour gérer la concaténation de manière plus claire : la méthode `format`.\n",
+    "La concaténation de chaînes peut vite devenir ennuyeuse, répétitive, fautive. Heureusement, Python propose des outils plutôt bien pensés pour gérer la concaténation de manière plus claire : la méthode `format`.\n",
     "\n",
-    "`.format()` est appelé sur une chaîne et remplace à l'intérieur de cette chaîne les valeurs entre accolades. Par défault, elle remplace les accolades dans l'ordre des variables :\n"
+    "`.format()` est appelé sur une chaîne et remplace à l'intérieur de cette chaîne les valeurs entre accolades. Par défaut, elle remplace les accolades dans l'ordre des variables :\n"
    ]
   },
   {
@@ -182,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quand on traîte de grandes chaînes, on peut simplifier encore : il s'agit alors de nommer des noms à ses remplacements :"
+    "Quand on traite de grandes chaînes, on peut simplifier encore : il s'agit alors de nommer des noms à ses remplacements :"
    ]
   },
   {
@@ -263,9 +263,9 @@
     "\n",
     "Le fichier [data/json/twitter.humanitesnumeriques.json](data/json/twitter.humanitesnumeriques.json) contient quelques tweets comprenant la mention \"humanites numeriques\". \n",
     "\n",
-    "1. Lisez le fichier (*utilisez si nécessaire un formatteur comme [JSON Formatter](https://jsonformatter.curiousconcept.com/)*)\n",
+    "1. Lisez le fichier (*utilisez si nécessaire un formateur comme [JSON Formatter](https://jsonformatter.curiousconcept.com/)*)\n",
     "2. Essayez de comprendre la structure\n",
-    "3. Afficher grâce à une boucle les tweets en suivant l'example suivant :\n",
+    "3. Afficher grâce à une boucle les tweets en suivant l'exemple suivant :\n",
     "\n",
     "```\n",
     "http://twitter.com/statuses/939909652824969216    lapointejm    RT @agefen: L'ouverture de la nouvelle API de Gallica est un événement scientifique majeur pour le paysage des Humanités Numériques en Fran…\n",
@@ -287,7 +287,7 @@
    "source": [
     "#### e. Exercice supplémentaire\n",
     "\n",
-    "À partir du code précédent, transformer l'exercice en chargeant le même fichier JSON et en écrivant un fichier CSV reprenant la structure en colonne `Lien | Auteur | Date | Tweet`"
+    "À partir du code précédent, transformez l'exercice en chargeant le même fichier JSON et en écrivant un fichier CSV reprenant la structure en colonne `Lien | Auteur | Date | Tweet`"
    ]
   },
   {
@@ -323,7 +323,7 @@
     "\n",
     "#### Ce que l'on recommande d'approfondir\n",
     "\n",
-    "Si les fonctions `csv.reader()` et `csv.writer()` sont sympathiques, les fonctions `DictReader` et `DictWriter` le sont beaucoup plus : elles stockent les noms de colonnes ! *Cf.* [la documentation](https://docs.python.org/3.5/library/csv.html#csv.DictReader)"
+    "Si les fonctions `csv.reader()` et `csv.writer()` sont sympathiques, les fonctions `DictReader` et `DictWriter` le sont beaucoup plus : elles stockent les noms de colonnes ! *cf.* [la documentation](https://docs.python.org/3.5/library/csv.html#csv.DictReader)"
    ]
   }
  ],
