--- a/Chapitre 4.3 - CSV, JSON et requetes.ipynb
+++ b/Chapitre 4.3 - CSV, JSON et requetes.ipynb
@@ -23,10 +23,10 @@
     "\n",
     "![Anatomie d'une requête HTTP](images/http.request.request.png)\n",
     "\n",
-    "La requẽte, c'est-à-dire l'information envoyée au serveur, est composée à minima de trois type d'informations :\n",
+    "La requête, c'est-à-dire l'information envoyée au serveur, est composée à minima de trois types d'informations :\n",
     "\n",
     "- l'URL\n",
-    "- le méthode\n",
+    "- la méthode\n",
     "- les headers\n",
     "\n",
     "#### URL\n",
@@ -43,7 +43,7 @@
     "\n",
     "#### Méthode\n",
     "\n",
-    "La méthode informe le serveur de ce que vous allez vouloir faire. 90% des requêtes que vous faites en navigant sur le web sont en GET : vous récupérez de l'information. Vous utilisez sur les 9.9% restant la requête POST, notamment quand vous vous connectez sur vos comptes sur les divers sites que vous utilisez.\n",
+    "La méthode informe le serveur de ce que vous allez vouloir faire. 90% des requêtes que vous faites en naviguant sur le web sont en GET : vous récupérez de l'information. Vous utilisez sur les 9.9% restant la requête POST, notamment quand vous vous connectez sur vos comptes sur les divers sites que vous utilisez.\n",
     "\n",
     "#### Les Headers\n",
     "\n",
@@ -55,7 +55,7 @@
     "\n",
     "#### (Optionnel) Le Corps (Body, data, etc.)\n",
     "\n",
-    "Dans le cadre de l'envoi d'un formulaire ou d'un fichier, on a un corps dans la requête. Beaucoup de formats différents sont possible dans ce cadre. De nombreuses API acceptent par exemple l'encodage en JSON de vos informations."
+    "Dans le cadre de l'envoi d'un formulaire ou d'un fichier, on a un corps dans la requête. Beaucoup de formats différents sont possibles dans ce cadre. De nombreuses API acceptent par exemple l'encodage en JSON de vos informations."
    ]
   },
   {
@@ -70,7 +70,7 @@
     "\n",
     "#### Les Headers \n",
     "\n",
-    "Tout comme la requête, les Headers nous renvoie l'information sur la réponse. Voici quelques headers utiles\n",
+    "Tout comme la requête, les Headers nous renvoient l'information sur la réponse. Voici quelques headers utiles.\n",
     "\n",
     "\n",
     "| Headers Clé | Headers Valeur   | Note |\n",
@@ -86,7 +86,7 @@
     "- 403 : accès refusé ;\n",
     "- 404 : page non trouvée ;\n",
     "- 500 et 503 : erreur serveur.\n",
-    "- 418 : \"I’m a teapot\" (Blague du 1er Avril 1998 resté dans le standard)\n",
+    "- 418 : \"I’m a teapot\" (Blague du 1er avril 1998 resté dans le standard)\n",
     "\n",
     "\n",
     "\n",
@@ -104,9 +104,9 @@
     "\n",
     "### 2.A Le module `requests`\n",
     "\n",
-    "Tout comme il existe pour python des modules pour gérer les CSV et les JSON, il en existe pour faire des requêtes WEB. Cela dit, il ne font pas partie du coeur de Python ! C'est pour ça que nous les avons installés. En effet, quand à l'installation, vous avez tapé `pip install -r requirements.txt`, vous avez demandé à PIP (Un gestionnaire de dépendances/librairies de python) d'installer chaque librairie citée dans le fichier `requirements.txt`. L'une d'entre elles était `requests`\n",
+    "Tout comme il existe pour python des modules pour gérer les CSV et les JSON, il en existe pour faire des requêtes WEB. Cela dit, ils ne font pas partie du coeur de Python ! C'est pour ça que nous les avons installés. En effet, quant à l'installation, vous avez tapé `pip install -r requirements.txt`, vous avez demandé à PIP (un gestionnaire de dépendances/librairies de python) d'installer chaque librairie citée dans le fichier `requirements.txt`. L'une d'entre elles était `requests`\n",
     "\n",
-    "Le module `requests` possède sa documentation sur son [propre site](http://docs.python-requests.org/en/master/). Au moment de l'écriture, le module est dans sa version 2.18.4\n",
+    "Le module `requests` possède sa documentation sur son [propre site](http://docs.python-requests.org/en/master/). Au moment de l'écriture, le module est dans sa version 2.18.4.\n",
     "\n",
     "### 2.B Faire une requête GET:\n",
     "\n",
@@ -259,7 +259,7 @@
    "source": [
     "### Exercice de compréhension \n",
     "\n",
-    "Lisez le code ci-dessous. Il est issu du projet EHRI ( https://portal.ehri-project.eu/api/v1#api-usage-python ). Essayez de comprendre ce qu'il fait, commentez le de manière à vous en souvenir "
+    "Lisez le code ci-dessous. Il est issu du projet EHRI ( https://portal.ehri-project.eu/api/v1#api-usage-python ). Essayez de comprendre ce qu'il fait, commentez-le de manière à vous en souvenir. "
    ]
   },
   {
