--- a/Chapitre 4.1 - CSV, JSON et requetes.ipynb
+++ b/Chapitre 4.1 - CSV, JSON et requetes.ipynb
@@ -18,7 +18,7 @@
     "- le fichier utilise un séparateur de colonnes (usuellement une virgule, un point-virgule ou une tabulation)\n",
     "- le fichier utilise une ligne par ligne de tableur\n",
     "\n",
-    "Exemple : [Les 1000 premiers numéros du Gaulois en statistiques](./data/csv/gaulois.csv) (Grâce à la [BNF](http://api.bnf.fr/m%C3%A9tadonn%C3%A9es-quantitatives-de-la-presse-ancienne-xixe-xxe-si%C3%A8cles#chapitre3) )"
+    "Exemple : [Les 1000 premiers numéros du Gaulois en statistiques](./data/csv/gaulois.csv) (grâce à la [BNF](http://api.bnf.fr/m%C3%A9tadonn%C3%A9es-quantitatives-de-la-presse-ancienne-xixe-xxe-si%C3%A8cles#chapitre3) )"
    ]
   },
   {
@@ -27,9 +27,9 @@
    "source": [
     "## Les Packages\n",
     "\n",
-    "Python est fait de nombreuses fonctions de bases. Nous avons vu par exemple qu'il était possible d'utiliser facilement les fonction `len()` ou encore `print()`. Mais Python possède aussi des `packages` (le nom des librairies et bibliothèques en Python) par défault.\n",
+    "Python est fait de nombreuses fonctions de bases. Nous avons vu par exemple qu'il était possible d'utiliser facilement les fonctions `len()` ou encore `print()`. Mais Python possède aussi des `packages` (le nom des librairies et bibliothèques en Python) par défaut.\n",
     "\n",
-    "Un package est un ensemble de modules comportant des outils tels que des fonctions et qui peuvent être assez simplement importés. Par exemple, si je voulais travailler avec le package standard pour utiliser des fichiers CSV, je ferai :"
+    "Un package est un ensemble de modules comportant des outils tels que des fonctions et qui peut être assez simplement importé. Par exemple, si je voulais travailler avec le package standard pour utiliser des fichiers CSV, je ferais :"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "C'est bien mais ca ne vous dit pas grand chose non ? On voit à la limite quelque chose pour lire (`reader`) et quelque chose pour écrire (`writer`) avec *a priori* deux variations : `DictReader` et `DictWriter`. Mais cela reste vague. "
+    "C'est bien, mais ça ne vous dit pas grand-chose non ? On voit à la limite quelque chose pour lire (`reader`) et quelque chose pour écrire (`writer`) avec *a priori* deux variations : `DictReader` et `DictWriter`. Mais cela reste vague. "
    ]
   },
   {
@@ -78,7 +78,7 @@
     "\n",
     "### 1. Lire\n",
     "\n",
-    "Commencons par ce qui est la documentation de `reader()`\n",
+    "Commençons par ce qui est la documentation de `reader()`\n",
     " \n",
     "#### csv.reader(csvfile, dialect=’excel’, **fmtparams)\n",
     "\n",
@@ -119,7 +119,7 @@
     "    \n",
     "Regardons le fichier [data/csv/eggs.csv](data/csv/eggs.csv)\n",
     "\n",
-    "En lancant l'exemple, on s'apercoit que le `reader` va renvoyer une liste quand on va itérer dessus: ces listes correspondent aux lignes."
+    "En lançant l'exemple, on s'aperçoit que le `reader` va renvoyer une liste quand on va itérer dessus: ces listes correspondent aux lignes."
    ]
   },
   {
@@ -149,7 +149,7 @@
    "source": [
     "##### Exercice \n",
     "\n",
-    "À partir du fichier `data/csv/gaulois.csv`, compter le nombre de publicité en page sur l'ensemble des numéros. \n",
+    "À partir du fichier `data/csv/gaulois.csv`, compter le nombre de publicités en page 1 sur l'ensemble des numéros. \n",
     "\n",
     "*Attention ! La première ligne est une ligne d'en-tête*"
    ]
@@ -174,7 +174,7 @@
     "\n",
     "Si lire est utile, écrire l'est tout autant, surtout lorsque l'on récupère des informations d'ici et là et que l'on veut les remettre en formes\n",
     "\n",
-    "Voyons la documentation de csv.writer et son example :\n",
+    "Voyons la documentation de csv.writer et son exemple :\n",
     "\n",
     "#### csv.writer(csvfile, dialect=’excel’, **fmtparams)\n",
     "\n",
@@ -204,7 +204,7 @@
     "\n",
     "- `csv.writer()` prend comme premier argument un fichier ouvert en mode écriture\n",
     "- il peut prendre un `dialect` ou des paramètres qui ne sont pas développés par la documentation de la fonction elle-même : dans `**fmtparams`, `**` signifie qu'il existe d'autres paramètres optionnels nominatifs.\n",
-    "- il arrive que, sans aller dans *Dialects and Formatting Parameters*, nous avons deux exemples de ces paramètres dans l'exemple :\n",
+    "- il arrive que, sans aller dans *Dialects and Formatting Parameters*, nous ayons deux exemples de ces paramètres dans l'exemple :\n",
     "    - `delimiter` qui semble être un délimiteur de colonne.\n",
     "    - `quotechar` qui semble être un \"encapsulateur\" permettant d'échapper les délimiteurs\n",
     "    - `quoting` qui d'après la documentation correspond à un mode de citation minimal (Utilisation des `quotechar` que lorsque cela est nécessaire. C'est par ailleurs la valeur par défaut : https://docs.python.org/3.5/library/csv.html#csv.Dialect.quoting )\n",
@@ -213,7 +213,7 @@
     "    \n",
     "Regardons le fichier [data/csv/eggs.csv](data/csv/eggs.csv)\n",
     "\n",
-    "En lancant l'exemple, on s'apercoit que le `writer()` va rédiger deux lignes. Ce sont les deux que nous avons lues plus haut."
+    "En lançant l'exemple, on s'aperçoit que le `writer()` va rédiger deux lignes. Ce sont les deux que nous avons lues plus haut."
    ]
   },
   {
@@ -222,33 +222,14 @@
    "source": [
     "##### Exercice\n",
     "\n",
-    "`modules_cours.chapitre4` est un module écrit spécifiquement pour ce cours (Si vous êtes [curieux-ses](modules_cours/chapitre4.py)) Dans ce module, il y a la fonction `read_rss()` qui renvoit un générateur contenant des tuples Titre - Résumé - Lien - Date de publication. Par exemple :"
+    "`modules_cours.chapitre4` est un module écrit spécifiquement pour ce cours (si vous êtes [curieux-ses](modules_cours/chapitre4.py)) Dans ce module, il y a la fonction `read_rss()` qui renvoie un générateur contenant des tuples Titre - Résumé - Lien - Date de publication. Par exemple :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Le fonds Delphine Seyrig dans BnF archives et manuscrits', '', 'http://www.bnf.fr/fr/la_bnf/dpt_asp/s.actualites_arts_spectacle.html?first_Art=oui', '2017-11-22 13:02:02')\n",
-      "('Interruption de la Clinique juridique après la séance du 20&#160;décembre 2017, reprise le mercredi 10&#160;janvier 2018', '', 'http://www.bnf.fr/fr/la_bnf/bibliotheque_haut-de-jardin/s.clinique_juridique.html?first_Art=non', '2017-12-15 13:21:02')\n",
-      "('La salle Labrouste fermera dès 15 h les samedis 23 et 30 décembre 2017', '', 'http://www.bnf.fr', '2017-12-18 10:03:34')\n",
-      "('À partir du 7 novembre 2017 - \\nLes accueils du département de la Reproduction évoluent !', \"Désormais, vous êtes invités à prendre rendez-vous avec l'un de nos bibliothécaires - sur les sites François-Mitterrand ou Richelieu - en utilisant notre application de réservation.\", 'https://reservation.affluences.com/site/351', '2017-11-02 10:18:55')\n",
-      "(\"jusqu'au 22 décembre 2017 - \\nLénine et la Révolution d'octobre -&#160;Bibliographie et sélection de documents\", '', 'http://www.bnf.fr/fr/collections_et_services/anx_biblios_histoire/a.biblio_octobre_1917.html', '2017-11-20 17:40:09')\n",
-      "(\"Quel est le juste prix d'une entreprise&#160;? –&#160;mini-bibliographie\", '', 'http://www.bnf.fr/documents/biblio_mini_transfair_2017.pdf', '2017-12-01 11:08:53')\n",
-      "(\"jusqu'au 15 décembre 2017 - \\nJean Rouch (1917-2004) : l'homme-cinéma -&#160;Bibliographie et sélection de documents\", '', 'http://www.bnf.fr/fr/collections_et_services/anx_biblios_philo/a.biblio_jean_rouch.html', '2017-11-20 17:37:50')\n",
-      "('Devenez mécène du salon Louis XV', 'chef-d’œuvre du XVIII<sup>e</sup> siècle', 'http://www.bnf.fr/fr/acces_dedies/mecenat_partenariat/s.mecenat_renovation_richelieu.html?first_Art=oui', '2017-09-20 09:01:26')\n",
-      "(\"jusqu'au 28 janvier 2018 - \\nLe photojournalisme -&#160;Bibliographie\", '', 'http://www.bnf.fr/fr/collections_et_services/anx_biblios_livre/a.biblio_photojournalisme.html', '2017-12-05 17:12:33')\n",
-      "('Luigi Pirandello - Sélection de documents', '', 'http://www.bnf.fr/fr/la_bnf/dpt_mjv/s.actualites_maison_jean_vilar.html?first_Art=oui', '2017-11-29 13:51:55')\n",
-      "(\"Fêtes de fin d'année : fermeture de la BnF\", 'Tous les sites de la BnF seront fermés les dimanche 24, lundi 25 et dimanche 31 décembre 2017 et le lundi 1<sup>er</sup> janvier 2018.', 'http://www.bnf.fr', '2017-12-05 09:56:13')\n",
-      "('à partir du 1er avril 2016 - \\nFermeture temporaire du musée des Monnaies, médailles et antiques', '', 'http://www.bnf.fr/fr/la_bnf/dpt_mma/s.actualites_monnaies_medailles.html?first_Art=oui', '2017-07-11 10:17:40')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from modules_cours.chapitre4 import read_rss\n",
     "\n",
@@ -261,12 +242,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "À partir de cette fonction, réaliser un CSV (en utilisant le délimiteur `\\t`) pour le flux RSS de Bibliopat : `http://www.bibliopat.fr/rss-actualites`. Le CSV sera stocké à `bibliopat.csv`"
+    "À partir de cette fonction, réaliser un CSV (en utilisant le délimiteur `\\t`) pour le flux RSS de Bibliopat : `http://www.bibliopat.fr/rss-actualites`. Le CSV sera stocké à `bibliopat.csv`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +292,7 @@
     "\n",
     "#### Ce que l'on recommande d'approfondir\n",
     "\n",
-    "Si les fonctions `csv.reader()` et `csv.writer()` sont sympathiques, les fonctions `DictReader` et `DictWriter` le sont beaucoup plus : elles stockent les noms de colonnes ! *Cf.* [la documentation](https://docs.python.org/3.5/library/csv.html#csv.DictReader)"
+    "Si les fonctions `csv.reader()` et `csv.writer()` sont sympathiques, les fonctions `DictReader` et `DictWriter` le sont beaucoup plus : elles stockent les noms de colonnes ! *cf.* [la documentation](https://docs.python.org/3.5/library/csv.html#csv.DictReader)"
    ]
   }
  ],
