--- a/Chapitre 1 - Au début était la variable.ipynb
+++ b/Chapitre 1 - Au début était la variable.ipynb
@@ -923,7 +923,7 @@
     "\n",
     "bonnes_lectures.remove(\"Fifi Brindacier\")\n",
     "\n",
-    "print(good_reads)"
+    "print(bonnes_lectures)"
    ]
   },
   {
@@ -1085,7 +1085,7 @@
    },
    "outputs": [],
    "source": [
-    "good_reads = []"
+    "bonnes_lectures = []"
    ]
   },
   {
@@ -1601,7 +1601,7 @@
    },
    "outputs": [],
    "source": [
-    "good_reads[\"Le Retour du Roi\"]"
+    "bonnes_lectures[\"Le Retour du Roi\"]"
    ]
   },
   {
@@ -2387,7 +2387,7 @@
    "source": [
     "Nous avons vu beaucoup de choses. Il est maintenant temps de mettre tout ce que nous avons appris à l'épreuve. L'exercice suivant pourrait être assez difficile, mais vous avez les moyens de le faire!\n",
     "\n",
-    "Ce que nous voulons que vous fassiez, c'est écrire du code qui compte le nombre de mots dans lesquels la lettre *a* est présente. Vous devez le faire sur la base d'une distribution de fréquence de mots représentée par un dictionnaire. Dans ce dictionnaire `distribution`, les clés sont des mots et les valeurs sont les fréquences. Affectez votre décompte de a à la variable `nombre_de_a`."
+    "Ce que nous voulons que vous fassiez, c'est écrire du code qui compte le nombre total de *a* présent dans le texte, en fonction du dictionnaire de fréquence de mot suivant. Vous devez le faire sur la base d'une distribution de fréquence de mots représentée par un dictionnaire. Dans ce dictionnaire `distribution`, les clés sont des mots et les valeurs sont les fréquences. Affectez votre décompte de `a` à la variable `nombre_de_a`."
    ]
   },
   {
@@ -2408,11 +2408,13 @@
     "'sous': 1, 'spécialisée': 1, 'statut': 1, 'supérieur': 1, 'tutelle': 1, 'un': 1, \n",
     "'une': 2, 'vingtaine': 1, '«': 1, '»': 1, 'École': 3, 'Éducation': 1, 'à': 1, 'école': 1, \n",
     "'établissement': 1, 'étudiants': 1}\n",
-    "number_of_as = 0\n",
-    "# insert your code here\n",
+    "\n",
+    "nombre_de_a = 0\n",
+    "# On code ici\n",
+    "\n",
     "\n",
     "# Ce code vérifie\n",
-    "if number_of_as == 30:\n",
+    "if nombre_de_a == 30:\n",
     "    print('Bien joué!')\n",
     "else:\n",
     "    print('La réponse est incorrecte, essaye encore!')"
@@ -2457,6 +2459,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
