Correction Typo Chapitre JSON

--- a/Chapitre 4.2 - CSV, JSON et requetes.ipynb
+++ b/Chapitre 4.2 - CSV, JSON et requetes.ipynb
@@ -12,13 +12,13 @@
     "\n",
     "![Json](images/json.png)\n",
     "\n",
-    "*Dit : Jayzone à l'Américaine ou gisson à la francaise*\n",
+    "*Dit : Jayzone à l'Américaine ou gisson à la française*\n",
     "\n",
     "### 1. Historique \n",
     "\n",
     "Le format JSON est apparu pendant la première moitié des années 2000 et a été développé pour alléger la communication de données \"simples\" sur le web. Il est né dans le contexte du langage JavaScript mais est aujourd'hui utilisé dans l'ensemble des langages fortement utilisés (python, java, ruby, php, etc.)\n",
     "\n",
-    "Le JSON est aujourd'hui présent dans 99% des requêtes du web sans que vous vous en rendiez compte ! Il est en effet le format priviliégié par les développeurs pour communiquer entre le client et le serveur une fois la page affichée. "
+    "Le JSON est aujourd'hui présent dans 99% des requêtes du web sans que vous vous en rendiez compte ! Il est en effet le format privilégié par les développeurs pour communiquer entre le client et le serveur une fois la page affichée. "
    ]
   },
   {
@@ -30,11 +30,11 @@
     "\n",
     "![JSON Exemple](images/json.twitter.png)\n",
     "\n",
-    "Vous reconnaissez ? JSON est en fait très proche de la manière de décrire des dictionnaires ou des listes en python. Et de fait, l'object racine de JSON peut être une liste ou un dictionnnaire et peut contenir :\n",
+    "Vous reconnaissez ? JSON est en fait très proche de la manière de décrire des dictionnaires ou des listes en python. Et de fait, l'objet racine de JSON peut être une liste ou un dictionnaire et peut contenir :\n",
     "- des listes,\n",
     "- des dictionnaires,\n",
     "- des booléens,\n",
-    "- des chaînes de caractères\n",
+    "- des chaines de caractères\n",
     "- des entiers et des décimaux\n",
     "- des objets \"vides\" (`null`, l'équivalent de `None` en Python)\n",
     "\n",
@@ -96,7 +96,7 @@
    "source": [
     "#### a. Lire\n",
     "\n",
-    "Python propose deux fonctions pour lire du JSON : `json.load()` et `json.loads()`. La différence entre les deux est très ténue : la première prend une instance de fichier en cours de lecture, l'autre une chaîne de caractère (d'où le `s` à la fin pour `str`):"
+    "Python propose deux fonctions pour lire du JSON : `json.load()` et `json.loads()`. La différence entre les deux est très ténue : la première prend une instance de fichier en cours de lecture, l'autre une chaine de caractère (d'où le `s` à la fin pour `str`):"
    ]
   },
   {
@@ -146,11 +146,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### b. comme bonus : la méthode `.format()` pour la concaténation de chaîne\n",
+    "#### b. comme bonus : la méthode `.format()` pour la concaténation de chaine\n",
     "\n",
-    "La concaténation de chaînes peut vite devenir ennuyeuse, répétitive, fautive. Heureusement, python propose des outils plutôt bien pensés pour gérer la concaténation de manière plus claire : la méthode `format`.\n",
+    "La concaténation de chaines peut vite devenir ennuyeuse, répétitive, fautive. Heureusement, python propose des outils plutôt bien pensés pour gérer la concaténation de manière plus claire : la méthode `format`.\n",
     "\n",
-    "`.format()` est appelé sur une chaîne et remplace à l'intérieur de cette chaîne les valeurs entre accolades. Par défault, elle remplace les accolades dans l'ordre des variables :\n"
+    "`.format()` est appelé sur une chaine et remplace à l'intérieur de cette chaine les valeurs entre accolades. Par défaut, elle remplace les accolades dans l'ordre des variables :\n"
    ]
   },
   {
@@ -166,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On remarque que Python gère le *casting* des nombres en chaîne lui-même ici. Le code ci-dessus peut-être encore plus clarifié en l'écrivant ainsi :"
+    "On remarque que Python gère le *casting* des nombres en chaine lui-même ici. Le code ci-dessus peut-être encore plus clarifié en l'écrivant ainsi :"
    ]
   },
   {
@@ -182,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quand on traîte de grandes chaînes, on peut simplifier encore : il s'agit alors de nommer des noms à ses remplacements :"
+    "Quand on traite de grandes chaines, on peut simplifier encore : il s'agit alors de nommer des noms à ses remplacements :"
    ]
   },
   {
@@ -203,7 +203,7 @@
    "source": [
     "#### c. Écrire\n",
     "\n",
-    "Tout comme pour la lecture, le module JSON propose deux fonctions pour l'écriture qui correspondent à l'écriture dans une chaîne de caractère (`json.dumps()`) ou dans un fichier (`dump`):"
+    "Tout comme pour la lecture, le module JSON propose deux fonctions pour l'écriture qui correspondent à l'écriture dans une chaine de caractère (`json.dumps()`) ou dans un fichier (`dump`):"
    ]
   },
   {
@@ -263,9 +263,9 @@
     "\n",
     "Le fichier [data/json/twitter.humanitesnumeriques.json](data/json/twitter.humanitesnumeriques.json) contient quelques tweets comprenant la mention \"humanites numeriques\". \n",
     "\n",
-    "1. Lisez le fichier (*utilisez si nécessaire un formatteur comme [JSON Formatter](https://jsonformatter.curiousconcept.com/)*)\n",
+    "1. Lisez le fichier (*utilisez si nécessaire un formateur comme [JSON Formatter](https://jsonformatter.curiousconcept.com/)*)\n",
     "2. Essayez de comprendre la structure\n",
-    "3. Afficher grâce à une boucle les tweets en suivant l'example suivant :\n",
+    "3. Afficher grâce à une boucle les tweets en suivant l'exemple suivant :\n",
     "\n",
     "```\n",
     "http://twitter.com/statuses/939909652824969216    lapointejm    RT @agefen: L'ouverture de la nouvelle API de Gallica est un événement scientifique majeur pour le paysage des Humanités Numériques en Fran…\n",
@@ -287,7 +287,7 @@
    "source": [
     "#### e. Exercice supplémentaire\n",
     "\n",
-    "À partir du code précédent, transformer l'exercice en chargeant le même fichier JSON et en écrivant un fichier CSV reprenant la structure en colonne `Lien | Auteur | Date | Tweet`"
+    "À partir du code précédent, transformez l'exercice en chargeant le même fichier JSON et en écrivant un fichier CSV reprenant la structure en colonne `Lien | Auteur | Date | Tweet`"
    ]
   },
   {
@@ -323,7 +323,7 @@
     "\n",
     "#### Ce que l'on recommande d'approfondir\n",
     "\n",
-    "Si les fonctions `csv.reader()` et `csv.writer()` sont sympathiques, les fonctions `DictReader` et `DictWriter` le sont beaucoup plus : elles stockent les noms de colonnes ! *Cf.* [la documentation](https://docs.python.org/3.5/library/csv.html#csv.DictReader)"
+    "Si les fonctions `csv.reader()` et `csv.writer()` sont sympathiques, les fonctions `DictReader` et `DictWriter` le sont beaucoup plus : elles stockent les noms de colonnes ! *cf.* [la documentation](https://docs.python.org/3.5/library/csv.html#csv.DictReader)"
    ]
   }
  ],
@@ -343,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
