Corrections typo requests

--- a/Chapitre 4.3 - CSV, JSON et requetes.ipynb
+++ b/Chapitre 4.3 - CSV, JSON et requetes.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "![Anatomie d'une communication HTTP](images/http.request.scheme.png)\n",
     "\n",
-    "Lors d'une communication HTTP avec un serveur, la communication est scindable en deux : l'envoi de la requête et la réponse du serveur. Ces deux éléments de la communication répondent à un ensemble de standards très stricts permettant le fonctionnement du web tel que nous le connaissons."
+    "Lors d'une communication HTTP avec un serveur, la communication est divisible en deux : l'envoi de la requête et la réponse du serveur. Ces deux éléments de la communication répondent à un ensemble de standards très stricts permettant le fonctionnement du web tel que nous le connaissons."
    ]
   },
   {
@@ -23,16 +23,16 @@
     "\n",
     "![Anatomie d'une requête HTTP](images/http.request.request.png)\n",
     "\n",
-    "La requẽte, c'est-à-dire l'information envoyée au serveur, est composée à minima de trois type d'informations :\n",
+    "La requête, c'est-à-dire l'information envoyée au serveur, est composée à minima de trois types d'informations :\n",
     "\n",
     "- l'URL\n",
-    "- le méthode\n",
+    "- la méthode\n",
     "- les headers\n",
     "\n",
     "#### URL\n",
     "\n",
     "Voir le [schéma](images/url.png) ([Source](https://cascadingmedia.com/assets/images/insites/2015/02/url-anatomy/url-anatomy-55598c24.png) \n",
-    "L'URL est une information que l'on connaît tous. C'est l'adresse dont on requiert le contenu. Typiquement, l'adresse est divisible en plusieurs parties. Celle qui peut être importante et qui changera sûrement suivant les utilisateurs est la partie *query* qui permet d'apporter des informations supplémentaires.\n",
+    "L'URL est une information que l'on connait tous. C'est l'adresse dont on requiert le contenu. Typiquement, l'adresse est divisible en plusieurs parties. Celle qui peut être importante et qui changera surement suivant les utilisateurs est la partie *query* qui permet d'apporter des informations supplémentaires.\n",
     "\n",
     "Par exemple, dans http://cts.dh.uni-leipzig.de/api/cts?request=GetCapabilities&urn=urn:cts:latinLit:phi1294 , on a deux paramètres fournis :\n",
     "\n",
@@ -43,7 +43,7 @@
     "\n",
     "#### Méthode\n",
     "\n",
-    "La méthode informe le serveur de ce que vous allez vouloir faire. 90% des requêtes que vous faites en navigant sur le web sont en GET : vous récupérez de l'information. Vous utilisez sur les 9.9% restant la requête POST, notamment quand vous vous connectez sur vos comptes sur les divers sites que vous utilisez.\n",
+    "La méthode informe le serveur de ce que vous allez vouloir faire. 90% des requêtes que vous faites en naviguant sur le web sont en GET : vous récupérez de l'information. Vous utilisez sur les 9.9% restant la requête POST, notamment quand vous vous connectez sur vos comptes sur les divers sites que vous utilisez.\n",
     "\n",
     "#### Les Headers\n",
     "\n",
@@ -55,7 +55,7 @@
     "\n",
     "#### (Optionnel) Le Corps (Body, data, etc.)\n",
     "\n",
-    "Dans le cadre de l'envoi d'un formulaire ou d'un fichier, on a un corps dans la requête. Beaucoup de formats différents sont possible dans ce cadre. De nombreuses API acceptent par exemple l'encodage en JSON de vos informations."
+    "Dans le cadre de l'envoi d'un formulaire ou d'un fichier, on a un corps dans la requête. Beaucoup de formats différents sont possibles dans ce cadre. De nombreuses API acceptent par exemple l'encodage en JSON de vos informations."
    ]
   },
   {
@@ -70,7 +70,7 @@
     "\n",
     "#### Les Headers \n",
     "\n",
-    "Tout comme la requête, les Headers nous renvoie l'information sur la réponse. Voici quelques headers utiles\n",
+    "Tout comme la requête, les Headers nous renvoient l'information sur la réponse. Voici quelques headers utiles.\n",
     "\n",
     "\n",
     "| Headers Clé | Headers Valeur   | Note |\n",
@@ -79,14 +79,14 @@
     "\n",
     "#### Le code HTTP\n",
     "\n",
-    "Le code HTTP nous informe sur le statut de la réponse. Vous connaissez *a minima* le code 404, qui indique que la ressource demandée n'est pas disponible. Il existe bien d'autres codes (*cf.* [Wikipedia](https://fr.wikipedia.org/wiki/Liste_des_codes_HTTP) :\n",
+    "Le code HTTP nous informe sur le statut de la réponse. Vous connaissez *à minima* le code 404, qui indique que la ressource demandée n'est pas disponible. Il existe bien d'autres codes (*cf.* [Wikipedia](https://fr.wikipedia.org/wiki/Liste_des_codes_HTTP) :\n",
     "- 200 : succès de la requête ;\n",
     "- 301 et 302 : redirection, respectivement permanente et temporaire ;\n",
     "- 401 : utilisateur non authentifié ;\n",
     "- 403 : accès refusé ;\n",
     "- 404 : page non trouvée ;\n",
     "- 500 et 503 : erreur serveur.\n",
-    "- 418 : \"I’m a teapot\" (Blague du 1er Avril 1998 resté dans le standard)\n",
+    "- 418 : \"I’m a teapot\" (Blague du 1er avril 1998 restée dans le standard)\n",
     "\n",
     "\n",
     "\n",
@@ -104,7 +104,7 @@
     "\n",
     "### 2.A Le module `requests`\n",
     "\n",
-    "Tout comme il existe pour python des modules pour gérer les CSV et les JSON, il en existe pour faire des requêtes WEB. Cela dit, il ne font pas partie du coeur de Python ! C'est pour ça que nous les avons installés. En effet, quand à l'installation, vous avez tapé `pip install -r requirements.txt`, vous avez demandé à PIP (Un gestionnaire de dépendances/librairies de python) d'installer chaque librairie citée dans le fichier `requirements.txt`. L'une d'entre elles était `requests`\n",
+    "Tout comme il existe pour python des modules pour gérer les CSV et les JSON, il en existe pour faire des requêtes WEB. Cela dit, il ne font pas partie du coeur de Python ! C'est pour ça que nous les avons installés. En effet, quant à l'installation, vous avez tapé `pip install -r requirements.txt`, vous avez demandé à PIP (un gestionnaire de dépendances/librairies de python) d'installer chaque librairie citée dans le fichier `requirements.txt`. L'une d'entre elles était `requests`\n",
     "\n",
     "Le module `requests` possède sa documentation sur son [propre site](http://docs.python-requests.org/en/master/). Au moment de l'écriture, le module est dans sa version 2.18.4\n",
     "\n",
@@ -175,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La construction d'URL pouvant poser des problèmes (échappage de caractère par exemple), `requests.get()` accepte un paramètre `params`:"
+    "La construction d'URL pouvant poser des problèmes (échappement de caractère par exemple), `requests.get()` accepte un paramètre `params`:"
    ]
   },
   {
@@ -259,7 +259,7 @@
    "source": [
     "### Exercice de compréhension \n",
     "\n",
-    "Lisez le code ci-dessous. Il est issu du projet EHRI ( https://portal.ehri-project.eu/api/v1#api-usage-python ). Essayez de comprendre ce qu'il fait, commentez le de manière à vous en souvenir "
+    "Lisez le code ci-dessous. Il est issu du projet EHRI ( https://portal.ehri-project.eu/api/v1#api-usage-python ). Essayez de comprendre ce qu'il fait, commentez-le de manière à vous en souvenir. "
    ]
   },
   {
@@ -361,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
