--- a/Chapitre 4.1 - CSV, JSON et requetes.ipynb
+++ b/Chapitre 4.1 - CSV, JSON et requetes.ipynb
@@ -254,13 +254,7 @@
     "from modules_cours.chapitre4 import read_rss\n",
     "import csv\n",
     "\n",
-    "# Votre code ici\n",
-    "with open(\"biliopat.csv\", mode=\"w\") as bibliopat:\n",
-    "    outil_decriture_csv = csv.writer(bibliopat, delimiter='\\t')\n",
-    "    outil_decriture_csv.writerow([\"Titre\", \"Lien\", \"Date\"])\n",
-    "\n",
-    "    for titre, resume, lien, date in read_rss(\"http://www.bibliopat.fr/rss-actualites\"):\n",
-    "        outil_decriture_csv.writerow([titre, lien, date])"
+    "# Votre code ici"
    ]
   },
   {
