--- a/Chapitre 5 - Créer un outil CLI.ipynb
+++ b/Chapitre 5 - Créer un outil CLI.ipynb
@@ -11,11 +11,12 @@
     "\n",
     "<img src=\"images/cli.png\" align=\"right\" width=\"200px\" alt=\"Image de terminal\" />\n",
     "\n",
-    "CLI (ou **C**ommand **L**ine **I**nterface) s'oppose à GUI (**G**raphical **U**ser **I**nterface) : c'est un outil dont l'utilisation se fera dans un terminal. Ce genre d'interface, quoiqu'abrupte pour les débutant-e-s est bien souvent nécessaire quand l'on travaille sur des serveurs distants : ces serveurs possèdent rarement une interface graphique et seul le terminal est accessible.\n",
+    "CLI (ou __C__ ommand __L__ ine __I__ nterface) s'oppose à GUI (__G__ raphical __U__ ser __I__ nterface) : c'est un outil dont l'utilisation se fera dans un terminal. Ce genre d'interface, quoiqu'abrupte pour les débutant-e-s est bien souvent nécessaire quand l'on travaille sur des serveurs distants : ces serveurs possèdent rarement une interface graphique et seul le terminal est accessible.\n",
     "\n",
     "Par ailleurs, le développement d'interface graphique peut être très lourd dans les langages natifs, à tel point que bien souvent, aujourd'hui, on a recours à des outils comme [Electron](https://electronjs.org/) qui est en fait une installation simpliste de Chromium et a donc recours à JavaScript et HTML pour créer leur design.\n",
     "\n",
     "Alors, dans la vie de tous les jours, pourquoi avoir un script accessible en ligne de commande ? Et bien tout simplement pour accélérer quelques tâches ingrates du quotidien, ou pour éviter à avoir à écrire un fichier python avec des paramètres changeant. Car, qui dit interface, dit bien souvent paramétrisation : l'interface développée permettra de personnaliser certains paramètres (où enregistrer le résultat d'un téléchargement par exemple).\n",
+    "\n",
     "\n",
     "\n",
     "# Développer un CLI\n",
@@ -36,7 +37,58 @@
     "\n",
     "## Commençons !\n",
     "\n",
-    "Pour créer un script, nous allons déjà créer le fichier : nous l'appelerons \"recherche.py\"\n",
+    "Pour créer un script, nous allons déjà créer le fichier : nous l'appelerons \"recherche.py\". Ce script nous permettra de faire des recherche sur Isidore. Dans ce but, nous lirons un peu plus tard la documentation de l'API d'[Isidore](https://isidore.science/api).\n",
+    "\n",
+    "Un bon script python prend la forme suivante : \n",
+    "\n",
+    "1. On importe les librairies nécessaires;\n",
+    "2. On écrit ses fonctions et ses variables globales (utilisées dans plusieurs fonctions potentiellement);\n",
+    "3. On écrit les fonctions d'appel (généralement, si on en a qu'une, on l'appellera simplement `run` ou `cli`)\n",
+    "4. On appelle cette fonction dans une condition qui vérifie si le fichier python est exécuté comme fichier principal (et non importé d'ailleurs)\n",
+    "\n",
+    "```python\n",
+    "import click\n",
+    "\n",
+    "def parser_reponse_isidore():\n",
+    "    \"\"\" Fait une recherche sur Isidore\n",
+    "    \"\"\"\n",
+    "\n",
+    "def cherche_isidore():\n",
+    "    \"\"\" Chercher sur isidore en faisant une requête\n",
+    "    \"\"\"\n",
+    "    \n",
+    "def run():\n",
+    "    \"\"\" Commande que l'on mettra comme commande principale\n",
+    "    \"\"\"\n",
+    "    print(\"Commande exécutée !\")\n",
+    "    \n",
+    "# Si ce fichier est le fichier executé directement par python\n",
+    "# Alors on exécute la commande\n",
+    "if __name__ == \"__main__\":\n",
+    "    run() \n",
+    "```\n",
+    "\n",
+    "Il s'agit ici de la base que nous utiliserons. Pour transformer la commande en commande pour `Click`, on fera simplement :\n",
+    "\n",
+    "```python\n",
+    "# ...\n",
+    "@click.command()\n",
+    "def run():\n",
+    "    \"\"\" ....\n",
+    "    \"\"\"\n",
+    "# ...\n",
+    "```\n",
+    "\n",
+    "La syntaxe `@click.command` est ce qu'on appelle un décorateur. C'est une fonction qui transforme la fonction définit après celle-ci. C'est une manière plus rapide d'écrire quelque chose qui ressemblerait à cela (à peu près):\n",
+    "\n",
+    "```python\n",
+    "def run():\n",
+    "    # Do something\n",
+    "    \n",
+    "run = click.command(run)\n",
+    "```\n",
+    "\n",
+    "On peut utiliser autant de décorateurs que l'on veut sur une fonction !\n",
     "\n",
     "## Paramètre\n",
     "\n",
